Update Trips Controllers  (#33)
